--- a/aws-codegurureviewer-repository/pom.xml
+++ b/aws-codegurureviewer-repository/pom.xml
@@ -61,6 +61,12 @@
             <version>2.26.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/codegurureviewer -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>codegurureviewer</artifactId>
+            <version>2.13.39</version>
+        </dependency>
     </dependencies>
 
     <build>
