--- a/aws-codegurureviewer-repositoryassociation/.rpdk-config
+++ b/aws-codegurureviewer-repositoryassociation/.rpdk-config
@@ -11,6 +11,7 @@
             "codegurureviewer",
             "repositoryassociation"
         ],
-        "codegen_template_path": "default"
+        "codegen_template_path": "default",
+        "protocolVersion": "2.0.0"
     }
 }
