Add PassConnection permissions

--- a/aws-codegurureviewer-repositoryassociation/resource-role.yaml
+++ b/aws-codegurureviewer-repositoryassociation/resource-role.yaml
@@ -32,6 +32,7 @@ Resources:
                 - "codestar-connections:ListBranches"
                 - "codestar-connections:ListRepositories"
                 - "codestar-connections:ListTagsForResource"
+                - "codestar-connections:PassConnection"
                 - "codestar-connections:TagResource"
                 - "codestar-connections:UntagResource"
                 - "events:DeleteRule"
