--- a/aws-codegurureviewer-repositoryassociation/template.yml
+++ b/aws-codegurureviewer-repositoryassociation/template.yml
@@ -12,6 +12,7 @@ Resources:
     Properties:
       Handler: software.amazon.codegurureviewer.repositoryassociation.HandlerWrapper::handleRequest
       Runtime: java8
+      MemorySize: 256
       CodeUri: ./target/aws-codegurureviewer-repositoryassociation-handler-1.0-SNAPSHOT.jar
 
   TestEntrypoint:
@@ -19,4 +20,5 @@ Resources:
     Properties:
       Handler: software.amazon.codegurureviewer.repositoryassociation.HandlerWrapper::testEntrypoint
       Runtime: java8
+      MemorySize: 256
       CodeUri: ./target/aws-codegurureviewer-repositoryassociation-handler-1.0-SNAPSHOT.jar
