Add tag-on-create support

--- a/aws-codegurureviewer-repositoryassociation/resource-role.yaml
+++ b/aws-codegurureviewer-repositoryassociation/resource-role.yaml
@@ -29,6 +29,8 @@ Resources:
                 - "codeguru-reviewer:AssociateRepository"
                 - "codeguru-reviewer:DescribeRepositoryAssociation"
                 - "codeguru-reviewer:DisassociateRepository"
+                - "codeguru-reviewer:ListTagsForResource"
+                - "codeguru-reviewer:TagResource"
                 - "codestar-connections:ListBranches"
                 - "codestar-connections:ListRepositories"
                 - "codestar-connections:ListTagsForResource"
