--- a/aws-codegurureviewer-repositoryassociation/pom.xml
+++ b/aws-codegurureviewer-repositoryassociation/pom.xml
@@ -65,6 +65,7 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>codegurureviewer</artifactId>
+            <version>RELEASE</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
