--- a/aws-codegurureviewer-repositoryassociation/.rpdk-config
+++ b/aws-codegurureviewer-repositoryassociation/.rpdk-config
@@ -13,5 +13,6 @@
         ],
         "codegen_template_path": "default",
         "protocolVersion": "2.0.0"
-    }
+    },
+    "executableEntrypoint": "software.amazon.codegurureviewer.repositoryassociation.HandlerWrapperExecutable"
 }
