--- a/aws-codegurureviewer-repositoryassociation/resource-role.yaml
+++ b/aws-codegurureviewer-repositoryassociation/resource-role.yaml
@@ -29,6 +29,7 @@ Resources:
                 - "codeguru-reviewer:AssociateRepository"
                 - "codeguru-reviewer:DescribeRepositoryAssociation"
                 - "codeguru-reviewer:DisassociateRepository"
+                - "codeguru-reviewer:ListRepositoryAssociations"
                 - "codeguru-reviewer:ListTagsForResource"
                 - "codeguru-reviewer:TagResource"
                 - "codestar-connections:ListBranches"
